@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.999375-4
-Date: 2008-01-12
+Version: 0.999375-5
+Date: 2008-0.-..
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Doug and Martin <Matrix-authors@R-project.org>
